--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,53 +1,63 @@
-<div class="card">
-    <p-menubar class="lg:col-4">
-        <ng-template pTemplate="end">
-        </ng-template>
-    </p-menubar>
-</div>
 
-<div class="grid" align="center">
-    <div class="col-6">
-        <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
-            <div class="text-center mb-5">
-                <div class="text-900 text-3xl font-medium mb-3">Search</div>
-                <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-                <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
-            </div>
-
-            <div>
-                <label class="block text-900 font-medium mb-2">Select a model</label>
-                <div class="flex flex-wrap gap-3 align-items-center justify-content-between mb-6">
-                    <div class="flex align-items-center">
-                        <p-radioButton name="booleano" value="booleano" [(ngModel)]="model" inputId="booleano"></p-radioButton>
-                        <label for="booleano" class="ml-2">Booleano</label>
-                    </div>
-                    <div class="flex align-items-center">
-                        <p-radioButton name="extendido" value="extendido" [(ngModel)]="model" inputId="extendido"></p-radioButton>
-                        <label for="ingredient1" class="ml-2">Extendido</label>
-                    </div>
-                </div>
-
-                <p-inputGroup>
-                    <button type="button" pButton icon="pi pi-search"></button>
-                    <input type="text" pInputText placeholder="Keyword" />
-                </p-inputGroup>
-
-                <!-- <input [(ngModel)]="query" type="text" placeholder="Query" pInputText class="w-full mb-3"> -->
-
-                <!-- <div class="flex align-items-center justify-content-between mb-6">
-                    <div class="flex align-items-center">
-                        <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-                        <label for="rememberme1" class="text-900">Remember me</label>
-                    </div>
-                    <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
-                </div> -->
-
-                <!-- <button pButton pRipple icon="pi pi-search" class="w-full"></button> -->
-            </div>
-        </div>
+<div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center">
+    <div class="mb-3 font-bold text-3xl">
+        <span class="text-900 text-6xl">Comparación de resultados, </span>
+        <span class="text-blue-600 text-6xl">Booleano vs Booleano Extendido</span>
     </div>
+    <div class="text-700 mb-6">Ac turpis egestas maecenas pharetra convallis posuere morbi leo urna.</div>
 
-    <div class="col-12 lg:col-4">
-        <h1>Docs</h1>
+
+    <div class="grid">
+        <div class="col-6 md:col-6 mb-4 px-5">
+            <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                <span class="text-900 font-bold">Precisión : </span>
+                <span class="text-700 line-height-3"> Fracción de los documentos recobrados que son relevantes.</span>
+
+                <div class="card">
+                    <p-chart type="bar" [data]="precision" [options]="basicOptions"></p-chart>
+                </div>
+            </span>
+            <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+        </div>
+
+        <div class="col-6 md:col-6 mb-4 px-5">
+            <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                <span class="text-900 font-bold"> Recobrado: </span>
+                <span class="text-700 line-height-3">  Fracción de los documentos relevantes que fueron recuperados.</span>
+
+                <div class="card">
+                    <p-chart type="bar" [data]="recobrado" [options]="basicOptions"></p-chart>
+                </div>
+            </span>
+            <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+        </div>
+
+        <div class="col-6 md:col-6 mb-4 px-5">
+            <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                <span class="text-900 font-bold">Medida F: </span>
+                <span class="text-700 line-height-3"> : La Precisón y el Recobrado pueden ser a veces medidad contrarias,
+                    por lo que debe haber una forma de medirlos de manera integral. Se utiliza
+                    F como una media armónica de la tasa de precisión y la tasa de recobrado.
+                    En nuestro cálculo damos más importancia a la precisión haciendo β = 1.2</span>
+
+                <div class="card">
+                    <p-chart type="bar" [data]="medidaF" [options]="basicOptions"></p-chart>
+                </div>
+            </span>
+            <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+        </div>
+
+        <div class="col-6 md:col-6 mb-4 px-5">
+            <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                <span class="text-900 font-bold">Medida F1: </span>
+                <span class="text-700 line-height-3"> Es similar a F solo que le da igual importancia a la Precisión y
+                    al Recobrado, mientras mayor sea F1 la prueba es más exitosa.</span>
+
+                <div class="card">
+                    <p-chart type="bar" [data]="medidaF1" [options]="basicOptions"></p-chart>
+                </div>
+            </span>
+            <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+        </div>
     </div>
 </div>
