--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,7 +4,9 @@
         <span class="text-900 text-6xl">Comparación de resultados, </span>
         <span class="text-blue-600 text-6xl">Booleano vs Booleano Extendido</span>
     </div>
-    <div class="text-700 mb-6">Ac turpis egestas maecenas pharetra convallis posuere morbi leo urna.</div>
+    <div class="text-700 mb-6">Para la evaluación de estos modelos se utilizaron los conjuntos de datos Cranfield
+        y Vaswani y las siguientes medidas.
+        </div>
 
 
     <div class="grid">
@@ -58,6 +60,13 @@
                 </div>
             </span>
             <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+        </div>
+
+        <div class="flex justify-content-center flex-wrap gap-3 mb-4">
+            <p-button pRipple icon="pi pi-home" [rounded]="true" [routerLink]="['/']"></p-button>
+            <p-button pRipple icon="pi pi-arrow-left" [rounded]="true" [routerLink]="['/select-model']"></p-button>
+            <p-button pRipple icon="pi pi-arrow-right" [rounded]="true" [routerLink]="['/search']"></p-button>
+            <!-- <button pButton pRipple label="Next" class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap" "></button> -->
         </div>
     </div>
 </div>
