--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,14 +2,21 @@
 <div class="grid grid-nogutter surface-section text-800">
     <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
         <section>
-            <span class="block text-6xl font-bold mb-1">Create the screens</span>
-            <div class="text-6xl text-primary font-bold mb-3">your visitors deserve to see</div>
-            <p class="mt-0 mb-4 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            
-            <button pButton pRipple label="Search" icon="pi pi-search" class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap" [routerLink]="['/select-model']"></button>
+            <span class="block text-6xl font-bold mb-1">Sistemas de Recuperación de la Información</span>
+            <div class="text-6xl text-primary font-bold mb-3">Comparación de Modelos</div>
+            <p class="mt-0 mb-4 text-700 line-height-3">
+                Localizacion de materiales de
+                naturaleza no estructurada cuyo objetivo es satisfacer una necesidad de información en
+                una larga colección. 
+            </p>
+            <div class="flex flex-wrap gap-3 mb-4">
+                <p-button pRipple label="Comenzar" [rounded]="true" [routerLink]="['/select-model']"></p-button>
+            </div>
         </section>
     </div>
     <div class="col-12 md:col-6 overflow-hidden">
-        <img src="assets/images/blocks/hero/hero-1.png" alt="Image" class="md:ml-auto block md:h-full" style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)">
+        <div class="card">
+            <p-chart type="line" [data]="data" [options]="options"></p-chart>
+        </div>
     </div>
 </div>
