Annadiendo vista de feedback (queies con resultados de las queries), sidebar,

--- a/src/gui/src/app/components/data/data.component.html
+++ b/src/gui/src/app/components/data/data.component.html
@@ -1,5 +1,5 @@
 
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center">
+<div class="surface-section px-4 py-0 md:px-6 lg:px-8 text-center">
     <div class="mb-3 font-bold text-3xl">
         <span class="text-900 text-6xl">Comparación de resultados, </span>
         <span class="text-blue-600 text-6xl">Booleano vs Booleano Extendido</span>
@@ -62,11 +62,11 @@
             <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
         </div>
 
-        <div class="flex justify-content-center flex-wrap gap-3 mb-4">
+        <!-- <div class="flex justify-content-center flex-wrap gap-3 mb-4">
             <p-button pRipple icon="pi pi-home" [rounded]="true" [routerLink]="['/']"></p-button>
             <p-button pRipple icon="pi pi-arrow-left" [rounded]="true" [routerLink]="['/select-model']"></p-button>
             <p-button pRipple icon="pi pi-arrow-right" [rounded]="true" [routerLink]="['/search']"></p-button>
-            <!-- <button pButton pRipple label="Next" class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap" "></button> -->
-        </div>
+            <button pButton pRipple label="Next" class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap" "></button>
+        </div> -->
     </div>
 </div>
