--- a/src/gui/src/app/components/home/home.component.html
+++ b/src/gui/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-
 <div class="grid grid-nogutter surface-section text-800">
     <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
         <section>
@@ -9,9 +8,9 @@
                 naturaleza no estructurada cuyo objetivo es satisfacer una necesidad de información en
                 una larga colección. 
             </p>
-            <div class="flex flex-wrap gap-3 mb-4">
+            <!-- <div class="flex flex-wrap gap-3 mb-4">
                 <p-button pRipple label="Comenzar" [rounded]="true" [routerLink]="['/select-model']"></p-button>
-            </div>
+            </div> -->
         </section>
     </div>
     <div class="col-12 md:col-6 overflow-hidden">
