--- a/src/gui/src/app/app.component.html
+++ b/src/gui/src/app/app.component.html
@@ -1,3 +1,10 @@
 <body>
-  <router-outlet></router-outlet>
+    <div class="container surface-section">
+        <div class="sidebar" align="left">
+            <app-toolbar></app-toolbar>
+        </div>
+        <div class="content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </body>
