--- a/src/gui/src/app/components/toolbar/toolbar.component.html
+++ b/src/gui/src/app/components/toolbar/toolbar.component.html
@@ -28,7 +28,9 @@
                 </li>
             </ul>
         </ng-template>
-        <ng-template pTemplate="footer">Footer Content</ng-template>
+        <ng-template pTemplate="footer">
+            <span class="font-bold">Havana University</span>
+        </ng-template>
     </p-sidebar>
     <p-button label="Go to" [rounded]="true" [text]="true" severity="secondary " (click)="sidebarVisible = true">
     </p-button>
