--- a/src/gui/src/app/components/queries-details/queries-details.component.html
+++ b/src/gui/src/app/components/queries-details/queries-details.component.html
@@ -1,14 +1,18 @@
 <div class="px-4 py-0 md:px-6 lg:px-8 text-center">
-    <div class="mb-3 font-bold text-3xl">
-        <span class="text-900">One Product, </span>
-        <span class="text-blue-600">Many Solutions</span>
+    <div class="mb-3 font-bold ">
+        <span class="text-900 text-5xl">Consultas </span>
+        <div>
+            <span class="text-blue-600 text-3xl">Al hacer click en una consulta puede ver los documentos recuperados por el modelo booleano extendido</span>
+        </div>
+        
     </div>
-    <div class="text-700 mb-6">Ac turpis egestas maecenas pharetra convallis posuere morbi leo urna.</div>
+    <div class="text-700 mb-6">Para la evaluación de estos modelos se utilizó el conjuntos de datos Cranfield.</div>
+    <p-divider></p-divider>
     <ul class="list-none p-3 m-0">
         <li>
             <ul class="list-none p-0 m-0 overflow-hidden">
                 <div *ngFor="let query of queires">
-                    <div>
+                    <div align="center">
                         <li (click)="showDocsDialog(query)">
                             <a pRipple class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                                 <!-- <i class="pi pi-search mr-2"></i> -->
