--- a/src/gui/src/app/components/queries-details/queries-details.component.html
+++ b/src/gui/src/app/components/queries-details/queries-details.component.html
@@ -16,6 +16,7 @@
                         <li (click)="showDocsDialog(query)">
                             <a pRipple class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                                 <!-- <i class="pi pi-search mr-2"></i> -->
+                                <span class="text-pink-500" style="margin-right: 5px;">~</span>
                                 <span class="font-medium">{{query.text}}</span>
                             </a>
                         </li>
